[gd_scene load_steps=7 format=2]

[ext_resource path="res://content/weather/lightning/LightningStorm.gd" type="Script" id=1]
[ext_resource path="res://content/sounds/Weather/dome-strike.wav" type="AudioStream" id=2]
[ext_resource path="res://content/sounds/Weather/lightning_3.wav" type="AudioStream" id=3]
[ext_resource path="res://content/sounds/Weather/lightning_1.wav" type="AudioStream" id=4]
[ext_resource path="res://content/sounds/Weather/lightning_2.wav" type="AudioStream" id=5]

[sub_resource type="AudioStreamRandomPitch" id=1]
audio_stream = ExtResource( 2 )
random_pitch = 1.2

[node name="LightningStorm" type="Node2D" groups=["pauseL", "weather"]]
position = Vector2( 0, -120 )
script = ExtResource( 1 )

[node name="StrikeTimer" type="Timer" parent="."]
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="LightningSound1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
max_distance = 500.0
bus = "World"

[node name="LightningSound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
max_distance = 500.0
bus = "World"

[node name="LightningSound3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
max_distance = 500.0
bus = "World"

[node name="DomeStrikeSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 1 )
max_distance = 500.0
bus = "World"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="timeout" from="StrikeTimer" to="." method="_on_StrikeTimer_timeout"]
